--- a/dataWrang.ipynb
+++ b/dataWrang.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,13 +30,16 @@
     "results = results[['raceId', 'driverId', 'constructorId', 'position', 'rank']]\n",
     "\n",
     "races = pd.read_csv('data/races.csv')\n",
-    "races = races[['raceId', 'year']]\n",
+    "races.rename(columns={'name': 'raceName'}, inplace=True)\n",
+    "races = races[['raceId', 'year', 'raceName']]\n",
     "\n",
     "drivers = pd.read_csv('data/drivers.csv')\n",
-    "drivers = drivers[['driverId', 'driverRef']]\n",
+    "drivers['driverFullname'] = drivers['forename'] + ' ' + drivers['surname']\n",
+    "drivers = drivers[['driverId', 'driverFullname']]\n",
     "    \n",
     "constructors = pd.read_csv('data/constructors.csv')\n",
-    "constructors = constructors[['constructorId', 'constructorRef']]\n",
+    "constructors.rename(columns={'name': 'constructorName'}, inplace=True)\n",
+    "constructors = constructors[['constructorId', 'constructorName']]\n",
     "\n",
     "pitstops = pd.read_csv('data/pit_stops.csv')\n",
     "pitstops = pitstops[['raceId', 'driverId', 'stop', 'duration', 'milliseconds']]"
@@ -44,19 +47,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
+    "results = results.merge(races, on='raceId', how='inner')\n",
     "results = results.merge(drivers, on='driverId', how='left')\n",
     "results = results.merge(constructors, on='constructorId', how='left')\n",
-    "results = results.merge(races, on='raceId', how='left')\n",
     "results = results.merge(pitstops, on=['raceId', 'driverId'], how='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['year', 'raceName', 'driverFullname', 'constructorName', 'position', 'stop', 'milliseconds']\n",
+    "times = results[columns].sort_values(by=['year'])\\\n",
+    "                       .dropna(subset=['milliseconds'])\n",
+    "\n",
+    "times.to_csv('data/times.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -80,89 +96,65 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>raceId</th>\n",
-       "      <th>driverId</th>\n",
-       "      <th>constructorId</th>\n",
-       "      <th>position</th>\n",
-       "      <th>rank</th>\n",
-       "      <th>driverRef</th>\n",
-       "      <th>constructorRef</th>\n",
        "      <th>year</th>\n",
+       "      <th>raceName</th>\n",
+       "      <th>driverFullname</th>\n",
+       "      <th>constructorName</th>\n",
+       "      <th>position</th>\n",
        "      <th>stop</th>\n",
-       "      <th>duration</th>\n",
        "      <th>milliseconds</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>18</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <th>21544</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Italian Grand Prix</td>\n",
+       "      <td>Jenson Button</td>\n",
+       "      <td>McLaren</td>\n",
        "      <td>2</td>\n",
-       "      <td>hamilton</td>\n",
-       "      <td>mclaren</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>22095.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>18</td>\n",
+       "      <th>21543</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Italian Grand Prix</td>\n",
+       "      <td>Jenson Button</td>\n",
+       "      <td>McLaren</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>heidfeld</td>\n",
-       "      <td>bmw_sauber</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>21660.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>18</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>rosberg</td>\n",
-       "      <td>williams</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>18</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>alonso</td>\n",
-       "      <td>renault</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>18</td>\n",
-       "      <td>5</td>\n",
+       "      <th>21542</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Italian Grand Prix</td>\n",
+       "      <td>Sebastian Vettel</td>\n",
+       "      <td>Red Bull</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>21378.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21541</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Italian Grand Prix</td>\n",
+       "      <td>Sebastian Vettel</td>\n",
+       "      <td>Red Bull</td>\n",
        "      <td>1</td>\n",
-       "      <td>kovalainen</td>\n",
-       "      <td>mclaren</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>22124.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21532</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Belgian Grand Prix</td>\n",
+       "      <td>Vitantonio Liuzzi</td>\n",
+       "      <td>HRT</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>21766.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -173,141 +165,99 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30768</th>\n",
-       "      <td>1096</td>\n",
-       "      <td>825</td>\n",
-       "      <td>210</td>\n",
-       "      <td>17</td>\n",
-       "      <td>20</td>\n",
-       "      <td>kevin_magnussen</td>\n",
-       "      <td>haas</td>\n",
+       "      <th>30219</th>\n",
        "      <td>2022</td>\n",
+       "      <td>Azerbaijan Grand Prix</td>\n",
+       "      <td>Yuki Tsunoda</td>\n",
+       "      <td>AlphaTauri</td>\n",
+       "      <td>13</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>22.387</td>\n",
-       "      <td>22387.0</td>\n",
+       "      <td>23083.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30769</th>\n",
-       "      <td>1096</td>\n",
-       "      <td>1</td>\n",
-       "      <td>131</td>\n",
-       "      <td>18</td>\n",
-       "      <td>11</td>\n",
-       "      <td>hamilton</td>\n",
-       "      <td>mercedes</td>\n",
+       "      <th>30220</th>\n",
        "      <td>2022</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>21.270</td>\n",
-       "      <td>21270.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30770</th>\n",
-       "      <td>1096</td>\n",
-       "      <td>849</td>\n",
-       "      <td>3</td>\n",
-       "      <td>19</td>\n",
-       "      <td>14</td>\n",
-       "      <td>latifi</td>\n",
-       "      <td>williams</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>22.423</td>\n",
-       "      <td>22423.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30771</th>\n",
-       "      <td>1096</td>\n",
-       "      <td>849</td>\n",
-       "      <td>3</td>\n",
-       "      <td>19</td>\n",
-       "      <td>14</td>\n",
-       "      <td>latifi</td>\n",
-       "      <td>williams</td>\n",
-       "      <td>2022</td>\n",
+       "      <td>Azerbaijan Grand Prix</td>\n",
+       "      <td>Yuki Tsunoda</td>\n",
+       "      <td>AlphaTauri</td>\n",
+       "      <td>13</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>25.174</td>\n",
-       "      <td>25174.0</td>\n",
+       "      <td>41500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30221</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Azerbaijan Grand Prix</td>\n",
+       "      <td>Mick Schumacher</td>\n",
+       "      <td>Haas F1 Team</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>26973.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30249</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Canadian Grand Prix</td>\n",
+       "      <td>Sebastian Vettel</td>\n",
+       "      <td>Aston Martin</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>23406.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30772</th>\n",
-       "      <td>1096</td>\n",
-       "      <td>4</td>\n",
-       "      <td>214</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>17</td>\n",
-       "      <td>alonso</td>\n",
-       "      <td>alpine</td>\n",
        "      <td>2022</td>\n",
+       "      <td>Abu Dhabi Grand Prix</td>\n",
+       "      <td>Fernando Alonso</td>\n",
+       "      <td>Alpine F1 Team</td>\n",
+       "      <td>\\N</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>21.740</td>\n",
        "      <td>21740.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>30773 rows × 11 columns</p>\n",
+       "<p>9634 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       raceId  driverId  constructorId position rank        driverRef  \\\n",
-       "0          18         1              1        1    2         hamilton   \n",
-       "1          18         2              2        2    3         heidfeld   \n",
-       "2          18         3              3        3    5          rosberg   \n",
-       "3          18         4              4        4    7           alonso   \n",
-       "4          18         5              1        5    1       kovalainen   \n",
-       "...       ...       ...            ...      ...  ...              ...   \n",
-       "30768    1096       825            210       17   20  kevin_magnussen   \n",
-       "30769    1096         1            131       18   11         hamilton   \n",
-       "30770    1096       849              3       19   14           latifi   \n",
-       "30771    1096       849              3       19   14           latifi   \n",
-       "30772    1096         4            214       \\N   17           alonso   \n",
+       "       year               raceName     driverFullname constructorName  \\\n",
+       "21544  2011     Italian Grand Prix      Jenson Button         McLaren   \n",
+       "21543  2011     Italian Grand Prix      Jenson Button         McLaren   \n",
+       "21542  2011     Italian Grand Prix   Sebastian Vettel        Red Bull   \n",
+       "21541  2011     Italian Grand Prix   Sebastian Vettel        Red Bull   \n",
+       "21532  2011     Belgian Grand Prix  Vitantonio Liuzzi             HRT   \n",
+       "...     ...                    ...                ...             ...   \n",
+       "30219  2022  Azerbaijan Grand Prix       Yuki Tsunoda      AlphaTauri   \n",
+       "30220  2022  Azerbaijan Grand Prix       Yuki Tsunoda      AlphaTauri   \n",
+       "30221  2022  Azerbaijan Grand Prix    Mick Schumacher    Haas F1 Team   \n",
+       "30249  2022    Canadian Grand Prix   Sebastian Vettel    Aston Martin   \n",
+       "30772  2022   Abu Dhabi Grand Prix    Fernando Alonso  Alpine F1 Team   \n",
        "\n",
-       "      constructorRef  year  stop duration  milliseconds  \n",
-       "0            mclaren  2008   NaN      NaN           NaN  \n",
-       "1         bmw_sauber  2008   NaN      NaN           NaN  \n",
-       "2           williams  2008   NaN      NaN           NaN  \n",
-       "3            renault  2008   NaN      NaN           NaN  \n",
-       "4            mclaren  2008   NaN      NaN           NaN  \n",
-       "...              ...   ...   ...      ...           ...  \n",
-       "30768           haas  2022   1.0   22.387       22387.0  \n",
-       "30769       mercedes  2022   1.0   21.270       21270.0  \n",
-       "30770       williams  2022   1.0   22.423       22423.0  \n",
-       "30771       williams  2022   2.0   25.174       25174.0  \n",
-       "30772         alpine  2022   1.0   21.740       21740.0  \n",
+       "      position  stop  milliseconds  \n",
+       "21544        2   2.0       22095.0  \n",
+       "21543        2   1.0       21660.0  \n",
+       "21542        1   2.0       21378.0  \n",
+       "21541        1   1.0       22124.0  \n",
+       "21532       19   1.0       21766.0  \n",
+       "...        ...   ...           ...  \n",
+       "30219       13   1.0       23083.0  \n",
+       "30220       13   2.0       41500.0  \n",
+       "30221       14   1.0       26973.0  \n",
+       "30249       12   1.0       23406.0  \n",
+       "30772       \\N   1.0       21740.0  \n",
        "\n",
-       "[30773 rows x 11 columns]"
+       "[9634 rows x 7 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns = ['year', 'driverRef', 'constructorRef', 'position', 'rank', 'stop', 'duration', 'milliseconds']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results[columns].to_csv('df.csv', index=False)"
+    "times"
    ]
   }
  ],
@@ -327,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
