drivers & constructors csv

--- a/dataWrang.ipynb
+++ b/dataWrang.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,21 +58,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "columns = ['year', 'raceName', 'driverFullname', 'constructorName', 'position', 'stop', 'milliseconds']\n",
-    "times = results[columns].sort_values(by=['year'])\\\n",
-    "                       .dropna(subset=['milliseconds'])\n",
+    "---\n",
     "\n",
-    "times.to_csv('data/times.csv', index=False)"
+    "### Getting `times.csv`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columnsTimes = ['year', 'raceName', 'driverFullname', 'constructorName', 'position', 'stop', 'milliseconds']\n",
+    "times = results[columnsTimes].sort_values(by=['year']) \\\n",
+    "                             .dropna(subset=['milliseconds'])\n",
+    "\n",
+    "times.to_csv('data/times.csv', index=False)\n",
+    "times.to_csv('../Public-Viz-F1/times.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -251,13 +262,302 @@
        "[9634 rows x 7 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "times"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Getting `driversWinners.csv` & `constructorsWinners.csv`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>driverFullname</th>\n",
+       "      <th>wins</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1950</td>\n",
+       "      <td>Johnnie Parsons</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1950</td>\n",
+       "      <td>Juan Fangio</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1950</td>\n",
+       "      <td>Nino Farina</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1951</td>\n",
+       "      <td>Alberto Ascari</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1951</td>\n",
+       "      <td>José Froilán González</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>388</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Carlos Sainz</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Charles Leclerc</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>George Russell</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>391</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Max Verstappen</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Sergio Pérez</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>393 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     year         driverFullname  wins\n",
+       "0    1950        Johnnie Parsons     1\n",
+       "1    1950            Juan Fangio     3\n",
+       "2    1950            Nino Farina     3\n",
+       "3    1951         Alberto Ascari     2\n",
+       "4    1951  José Froilán González     1\n",
+       "..    ...                    ...   ...\n",
+       "388  2022           Carlos Sainz     1\n",
+       "389  2022        Charles Leclerc     3\n",
+       "390  2022         George Russell     1\n",
+       "391  2022         Max Verstappen    15\n",
+       "392  2022           Sergio Pérez     2\n",
+       "\n",
+       "[393 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columnsDriverWinners = ['year', 'raceId', 'raceName', 'driverFullname', 'constructorName', 'position']\n",
+    "\n",
+    "driversWinners = results[columnsDriverWinners].query('position == \"1\"') \\\n",
+    "                                              .drop_duplicates() \\\n",
+    "                                              .groupby(['year', 'driverFullname'])['position'] \\\n",
+    "                                              .count() \\\n",
+    "                                              .reset_index(name='wins')\n",
+    "                                              \n",
+    "driversWinners.to_csv('data/driversWinners.csv', index=False)\n",
+    "driversWinners.to_csv('../Public-Viz-F1/driversWinners.csv', index=False)\n",
+    "\n",
+    "driversWinners"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>constructorName</th>\n",
+       "      <th>wins</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1950</td>\n",
+       "      <td>Alfa Romeo</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1950</td>\n",
+       "      <td>Kurtis Kraft</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1951</td>\n",
+       "      <td>Alfa Romeo</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1951</td>\n",
+       "      <td>Ferrari</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1951</td>\n",
+       "      <td>Kurtis Kraft</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Mercedes</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>267</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Red Bull</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>268</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Ferrari</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>269</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Mercedes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Red Bull</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>271 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     year constructorName  wins\n",
+       "0    1950      Alfa Romeo     6\n",
+       "1    1950    Kurtis Kraft     1\n",
+       "2    1951      Alfa Romeo     4\n",
+       "3    1951         Ferrari     3\n",
+       "4    1951    Kurtis Kraft     1\n",
+       "..    ...             ...   ...\n",
+       "266  2021        Mercedes     9\n",
+       "267  2021        Red Bull    11\n",
+       "268  2022         Ferrari     4\n",
+       "269  2022        Mercedes     1\n",
+       "270  2022        Red Bull    17\n",
+       "\n",
+       "[271 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columnsConstructorsWinners = ['year', 'raceId', 'raceName', 'constructorName', 'position']\n",
+    "\n",
+    "constructorsWinners = results[columnsConstructorsWinners].query('position == \"1\"') \\\n",
+    "                                                         .drop_duplicates() \\\n",
+    "                                                         .groupby(['year', 'constructorName'])['position'] \\\n",
+    "                                                         .count() \\\n",
+    "                                                         .reset_index(name='wins')\n",
+    "\n",
+    "constructorsWinners.to_csv('data/constructorsWinners.csv', index=False)\n",
+    "constructorsWinners.to_csv('../Public-Viz-F1/constructorsWinners.csv', index=False)\n",
+    "\n",
+    "constructorsWinners"
    ]
   }
  ],
