Cumsum and duration in seconds

--- a/dataWrang.ipynb
+++ b/dataWrang.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,13 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "columnsTimes = ['year', 'raceName', 'driverFullname', 'constructorName', 'position', 'stop', 'milliseconds']\n",
+    "columnsTimes = ['year', 'raceName', 'driverFullname', 'constructorName', 'position', 'stop', 'duration']\n",
     "times = results[columnsTimes].sort_values(by=['year']) \\\n",
-    "                             .dropna(subset=['milliseconds'])\n",
+    "                             .dropna(subset=['duration'])\n",
     "\n",
     "times.to_csv('data/times.csv', index=False)\n",
     "times.to_csv('../Public-Viz-F1/times.csv', index=False)"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "      <th>constructorName</th>\n",
        "      <th>position</th>\n",
        "      <th>stop</th>\n",
-       "      <th>milliseconds</th>\n",
+       "      <th>duration</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -125,7 +125,7 @@
        "      <td>McLaren</td>\n",
        "      <td>2</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>22095.0</td>\n",
+       "      <td>22.095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21543</th>\n",
@@ -135,7 +135,7 @@
        "      <td>McLaren</td>\n",
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>21660.0</td>\n",
+       "      <td>21.660</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21542</th>\n",
@@ -145,7 +145,7 @@
        "      <td>Red Bull</td>\n",
        "      <td>1</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>21378.0</td>\n",
+       "      <td>21.378</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21541</th>\n",
@@ -155,7 +155,7 @@
        "      <td>Red Bull</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>22124.0</td>\n",
+       "      <td>22.124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21532</th>\n",
@@ -165,7 +165,7 @@
        "      <td>HRT</td>\n",
        "      <td>19</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>21766.0</td>\n",
+       "      <td>21.766</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -185,7 +185,7 @@
        "      <td>AlphaTauri</td>\n",
        "      <td>13</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>23083.0</td>\n",
+       "      <td>23.083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30220</th>\n",
@@ -195,7 +195,7 @@
        "      <td>AlphaTauri</td>\n",
        "      <td>13</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>41500.0</td>\n",
+       "      <td>41.500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30221</th>\n",
@@ -205,7 +205,7 @@
        "      <td>Haas F1 Team</td>\n",
        "      <td>14</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>26973.0</td>\n",
+       "      <td>26.973</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30249</th>\n",
@@ -215,7 +215,7 @@
        "      <td>Aston Martin</td>\n",
        "      <td>12</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>23406.0</td>\n",
+       "      <td>23.406</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30772</th>\n",
@@ -225,7 +225,7 @@
        "      <td>Alpine F1 Team</td>\n",
        "      <td>\\N</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>21740.0</td>\n",
+       "      <td>21.740</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -246,23 +246,23 @@
        "30249  2022    Canadian Grand Prix   Sebastian Vettel    Aston Martin   \n",
        "30772  2022   Abu Dhabi Grand Prix    Fernando Alonso  Alpine F1 Team   \n",
        "\n",
-       "      position  stop  milliseconds  \n",
-       "21544        2   2.0       22095.0  \n",
-       "21543        2   1.0       21660.0  \n",
-       "21542        1   2.0       21378.0  \n",
-       "21541        1   1.0       22124.0  \n",
-       "21532       19   1.0       21766.0  \n",
-       "...        ...   ...           ...  \n",
-       "30219       13   1.0       23083.0  \n",
-       "30220       13   2.0       41500.0  \n",
-       "30221       14   1.0       26973.0  \n",
-       "30249       12   1.0       23406.0  \n",
-       "30772       \\N   1.0       21740.0  \n",
+       "      position  stop duration  \n",
+       "21544        2   2.0   22.095  \n",
+       "21543        2   1.0   21.660  \n",
+       "21542        1   2.0   21.378  \n",
+       "21541        1   1.0   22.124  \n",
+       "21532       19   1.0   21.766  \n",
+       "...        ...   ...      ...  \n",
+       "30219       13   1.0   23.083  \n",
+       "30220       13   2.0   41.500  \n",
+       "30221       14   1.0   26.973  \n",
+       "30249       12   1.0   23.406  \n",
+       "30772       \\N   1.0   21.740  \n",
        "\n",
        "[9634 rows x 7 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "      <th>389</th>\n",
        "      <td>2022</td>\n",
        "      <td>Charles Leclerc</td>\n",
-       "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>390</th>\n",
@@ -370,13 +370,13 @@
        "      <th>391</th>\n",
        "      <td>2022</td>\n",
        "      <td>Max Verstappen</td>\n",
-       "      <td>15</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>392</th>\n",
        "      <td>2022</td>\n",
        "      <td>Sergio Pérez</td>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -392,15 +392,15 @@
        "4    1951  José Froilán González     1\n",
        "..    ...                    ...   ...\n",
        "388  2022           Carlos Sainz     1\n",
-       "389  2022        Charles Leclerc     3\n",
+       "389  2022        Charles Leclerc     5\n",
        "390  2022         George Russell     1\n",
-       "391  2022         Max Verstappen    15\n",
-       "392  2022           Sergio Pérez     2\n",
+       "391  2022         Max Verstappen    35\n",
+       "392  2022           Sergio Pérez     4\n",
        "\n",
        "[393 rows x 3 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,6 +414,9 @@
     "                                              .count() \\\n",
     "                                              .reset_index(name='wins')\n",
     "                                              \n",
+    "# make the number of wins be cumulative\n",
+    "driversWinners['wins'] = driversWinners.groupby(['driverFullname'])['wins'].cumsum()\n",
+    "                                              \n",
     "driversWinners.to_csv('data/driversWinners.csv', index=False)\n",
     "driversWinners.to_csv('../Public-Viz-F1/driversWinners.csv', index=False)\n",
     "\n",
@@ -422,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +471,7 @@
        "      <th>2</th>\n",
        "      <td>1951</td>\n",
        "      <td>Alfa Romeo</td>\n",
-       "      <td>4</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -480,7 +483,7 @@
        "      <th>4</th>\n",
        "      <td>1951</td>\n",
        "      <td>Kurtis Kraft</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -492,31 +495,31 @@
        "      <th>266</th>\n",
        "      <td>2021</td>\n",
        "      <td>Mercedes</td>\n",
-       "      <td>9</td>\n",
+       "      <td>124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>267</th>\n",
        "      <td>2021</td>\n",
        "      <td>Red Bull</td>\n",
-       "      <td>11</td>\n",
+       "      <td>75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>268</th>\n",
        "      <td>2022</td>\n",
        "      <td>Ferrari</td>\n",
-       "      <td>4</td>\n",
+       "      <td>242</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>269</th>\n",
        "      <td>2022</td>\n",
        "      <td>Mercedes</td>\n",
-       "      <td>1</td>\n",
+       "      <td>125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>270</th>\n",
        "      <td>2022</td>\n",
        "      <td>Red Bull</td>\n",
-       "      <td>17</td>\n",
+       "      <td>92</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -527,20 +530,20 @@
        "     year constructorName  wins\n",
        "0    1950      Alfa Romeo     6\n",
        "1    1950    Kurtis Kraft     1\n",
-       "2    1951      Alfa Romeo     4\n",
+       "2    1951      Alfa Romeo    10\n",
        "3    1951         Ferrari     3\n",
-       "4    1951    Kurtis Kraft     1\n",
+       "4    1951    Kurtis Kraft     2\n",
        "..    ...             ...   ...\n",
-       "266  2021        Mercedes     9\n",
-       "267  2021        Red Bull    11\n",
-       "268  2022         Ferrari     4\n",
-       "269  2022        Mercedes     1\n",
-       "270  2022        Red Bull    17\n",
+       "266  2021        Mercedes   124\n",
+       "267  2021        Red Bull    75\n",
+       "268  2022         Ferrari   242\n",
+       "269  2022        Mercedes   125\n",
+       "270  2022        Red Bull    92\n",
        "\n",
        "[271 rows x 3 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,6 +556,9 @@
     "                                                         .groupby(['year', 'constructorName'])['position'] \\\n",
     "                                                         .count() \\\n",
     "                                                         .reset_index(name='wins')\n",
+    "                                                         \n",
+    "# make the number of wins be cumulative\n",
+    "constructorsWinners['wins'] = constructorsWinners.groupby(['constructorName'])['wins'].cumsum()\n",
     "\n",
     "constructorsWinners.to_csv('data/constructorsWinners.csv', index=False)\n",
     "constructorsWinners.to_csv('../Public-Viz-F1/constructorsWinners.csv', index=False)\n",
