Milliseconds to seconds

--- a/dataWrang.ipynb
+++ b/dataWrang.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,206 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "columnsTimes = ['year', 'raceName', 'driverFullname', 'constructorName', 'position', 'stop', 'duration']\n",
+    "columnsTimes = ['year', 'raceName', 'driverFullname', 'constructorName', 'position', 'stop', 'milliseconds']\n",
     "times = results[columnsTimes].sort_values(by=['year']) \\\n",
-    "                             .dropna(subset=['duration'])\n",
+    "                             .dropna(subset=['milliseconds'])\n",
+    "\n",
+    "times['duration'] = times['milliseconds'] / 1000\n",
     "\n",
     "times.to_csv('data/times.csv', index=False)\n",
     "times.to_csv('../Public-Viz-F1/times.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>raceName</th>\n",
-       "      <th>driverFullname</th>\n",
-       "      <th>constructorName</th>\n",
-       "      <th>position</th>\n",
-       "      <th>stop</th>\n",
-       "      <th>duration</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>21544</th>\n",
-       "      <td>2011</td>\n",
-       "      <td>Italian Grand Prix</td>\n",
-       "      <td>Jenson Button</td>\n",
-       "      <td>McLaren</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>22.095</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21543</th>\n",
-       "      <td>2011</td>\n",
-       "      <td>Italian Grand Prix</td>\n",
-       "      <td>Jenson Button</td>\n",
-       "      <td>McLaren</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>21.660</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21542</th>\n",
-       "      <td>2011</td>\n",
-       "      <td>Italian Grand Prix</td>\n",
-       "      <td>Sebastian Vettel</td>\n",
-       "      <td>Red Bull</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>21.378</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21541</th>\n",
-       "      <td>2011</td>\n",
-       "      <td>Italian Grand Prix</td>\n",
-       "      <td>Sebastian Vettel</td>\n",
-       "      <td>Red Bull</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>22.124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21532</th>\n",
-       "      <td>2011</td>\n",
-       "      <td>Belgian Grand Prix</td>\n",
-       "      <td>Vitantonio Liuzzi</td>\n",
-       "      <td>HRT</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>21.766</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30219</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Azerbaijan Grand Prix</td>\n",
-       "      <td>Yuki Tsunoda</td>\n",
-       "      <td>AlphaTauri</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>23.083</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30220</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Azerbaijan Grand Prix</td>\n",
-       "      <td>Yuki Tsunoda</td>\n",
-       "      <td>AlphaTauri</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>41.500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30221</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Azerbaijan Grand Prix</td>\n",
-       "      <td>Mick Schumacher</td>\n",
-       "      <td>Haas F1 Team</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>26.973</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30249</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Canadian Grand Prix</td>\n",
-       "      <td>Sebastian Vettel</td>\n",
-       "      <td>Aston Martin</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>23.406</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30772</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>Abu Dhabi Grand Prix</td>\n",
-       "      <td>Fernando Alonso</td>\n",
-       "      <td>Alpine F1 Team</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>21.740</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9634 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       year               raceName     driverFullname constructorName  \\\n",
-       "21544  2011     Italian Grand Prix      Jenson Button         McLaren   \n",
-       "21543  2011     Italian Grand Prix      Jenson Button         McLaren   \n",
-       "21542  2011     Italian Grand Prix   Sebastian Vettel        Red Bull   \n",
-       "21541  2011     Italian Grand Prix   Sebastian Vettel        Red Bull   \n",
-       "21532  2011     Belgian Grand Prix  Vitantonio Liuzzi             HRT   \n",
-       "...     ...                    ...                ...             ...   \n",
-       "30219  2022  Azerbaijan Grand Prix       Yuki Tsunoda      AlphaTauri   \n",
-       "30220  2022  Azerbaijan Grand Prix       Yuki Tsunoda      AlphaTauri   \n",
-       "30221  2022  Azerbaijan Grand Prix    Mick Schumacher    Haas F1 Team   \n",
-       "30249  2022    Canadian Grand Prix   Sebastian Vettel    Aston Martin   \n",
-       "30772  2022   Abu Dhabi Grand Prix    Fernando Alonso  Alpine F1 Team   \n",
-       "\n",
-       "      position  stop duration  \n",
-       "21544        2   2.0   22.095  \n",
-       "21543        2   1.0   21.660  \n",
-       "21542        1   2.0   21.378  \n",
-       "21541        1   1.0   22.124  \n",
-       "21532       19   1.0   21.766  \n",
-       "...        ...   ...      ...  \n",
-       "30219       13   1.0   23.083  \n",
-       "30220       13   2.0   41.500  \n",
-       "30221       14   1.0   26.973  \n",
-       "30249       12   1.0   23.406  \n",
-       "30772       \\N   1.0   21.740  \n",
-       "\n",
-       "[9634 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "times"
    ]
   },
   {
@@ -282,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +212,7 @@
        "[393 rows x 3 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +355,7 @@
        "[271 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,6 +376,16 @@
     "constructorsWinners.to_csv('../Public-Viz-F1/constructorsWinners.csv', index=False)\n",
     "\n",
     "constructorsWinners"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make the number of wins be cumulative and be counted until the current year\n",
+    "constructorsWinners['wins'] = constructorsWinners.groupby(['constructorName'])['wins'].cumsum()"
    ]
   }
  ],
