Muda o diretório de dataWrang

--- a/data/dataWrang.ipynb
+++ b/data/dataWrang.ipynb
@@ -352,7 +352,7 @@
     }
    ],
    "source": [
-    "results = pd.read_csv('data/results.csv')\n",
+    "results = pd.read_csv('results.csv')\n",
     "results"
    ]
   },
@@ -362,22 +362,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = pd.read_csv('data/results.csv')\n",
+    "results = pd.read_csv('results.csv')\n",
     "results = results[['raceId', 'driverId', 'constructorId', 'points', 'position']]\n",
     "\n",
-    "races = pd.read_csv('data/races.csv')\n",
+    "races = pd.read_csv('races.csv')\n",
     "races.rename(columns={'name': 'raceName'}, inplace=True)\n",
     "races = races[['raceId', 'year', 'raceName']]\n",
     "\n",
-    "drivers = pd.read_csv('data/drivers.csv')\n",
+    "drivers = pd.read_csv('drivers.csv')\n",
     "drivers['driverFullname'] = drivers['forename'] + ' ' + drivers['surname']\n",
     "drivers = drivers[['driverId', 'driverFullname']]\n",
     "    \n",
-    "constructors = pd.read_csv('data/constructors.csv')\n",
+    "constructors = pd.read_csv('constructors.csv')\n",
     "constructors.rename(columns={'name': 'constructorName'}, inplace=True)\n",
     "constructors = constructors[['constructorId', 'constructorName']]\n",
     "\n",
-    "pitstops = pd.read_csv('data/pit_stops.csv')\n",
+    "pitstops = pd.read_csv('pit_stops.csv')\n",
     "pitstops = pitstops[['raceId', 'driverId', 'stop', 'duration', 'milliseconds']]"
    ]
   },
@@ -415,8 +415,8 @@
     "\n",
     "times['duration'] = times['milliseconds'] / 1000\n",
     "\n",
-    "times.to_csv('data/times.csv', index=False)\n",
-    "times.to_csv('../Public-Viz-F1/times.csv', index=False)"
+    "times.to_csv('times.csv', index=False)\n",
+    "times.to_csv('../../Public-Viz-F1/times.csv', index=False)"
    ]
   },
   {
@@ -583,8 +583,8 @@
     "# pivot to make the columns turn into rows\n",
     "newDriversWinners = newDriversWinners.melt(id_vars=['year'], var_name='driverFullname', value_name='wins')\n",
     "\n",
-    "newDriversWinners.to_csv('data/driversWinners.csv', index=False)\n",
-    "newDriversWinners.to_csv('../Public-Viz-F1/driversWinners.csv', index=False)\n",
+    "newDriversWinners.to_csv('driversWinners.csv', index=False)\n",
+    "newDriversWinners.to_csv('../../Public-Viz-F1/driversWinners.csv', index=False)\n",
     "\n",
     "newDriversWinners"
    ]
@@ -744,8 +744,8 @@
     "# pivot to make the columns turn into rows\n",
     "newConstructorsWinners = newConstructorsWinners.melt(id_vars=['year'], var_name='constructorName', value_name='wins')\n",
     "\n",
-    "newConstructorsWinners.to_csv('data/constructorsWinners.csv', index=False)\n",
-    "newConstructorsWinners.to_csv('../Public-Viz-F1/constructorsWinners.csv', index=False)\n",
+    "newConstructorsWinners.to_csv('constructorsWinners.csv', index=False)\n",
+    "newConstructorsWinners.to_csv('../../Public-Viz-F1/constructorsWinners.csv', index=False)\n",
     "\n",
     "newConstructorsWinners"
    ]
