--- a/data/dataWrang.ipynb
+++ b/data/dataWrang.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -346,44 +346,44 @@
        "[25840 rows x 18 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results = pd.read_csv('results.csv')\n",
+    "results = pd.read_csv('source/results.csv')\n",
     "results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = pd.read_csv('results.csv')\n",
+    "results = pd.read_csv('source/results.csv')\n",
     "results = results[['raceId', 'driverId', 'constructorId', 'points', 'position']]\n",
     "\n",
-    "races = pd.read_csv('races.csv')\n",
+    "races = pd.read_csv('source/races.csv')\n",
     "races.rename(columns={'name': 'raceName'}, inplace=True)\n",
     "races = races[['raceId', 'year', 'raceName']]\n",
     "\n",
-    "drivers = pd.read_csv('drivers.csv')\n",
+    "drivers = pd.read_csv('source/drivers.csv')\n",
     "drivers['driverFullname'] = drivers['forename'] + ' ' + drivers['surname']\n",
     "drivers = drivers[['driverId', 'driverFullname']]\n",
     "    \n",
-    "constructors = pd.read_csv('constructors.csv')\n",
+    "constructors = pd.read_csv('source/constructors.csv')\n",
     "constructors.rename(columns={'name': 'constructorName'}, inplace=True)\n",
     "constructors = constructors[['constructorId', 'constructorName']]\n",
     "\n",
-    "pitstops = pd.read_csv('pit_stops.csv')\n",
+    "pitstops = pd.read_csv('source/pit_stops.csv')\n",
     "pitstops = pitstops[['raceId', 'driverId', 'stop', 'duration', 'milliseconds']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
     "\n",
     "times['duration'] = times['milliseconds'] / 1000\n",
     "\n",
-    "times.to_csv('times.csv', index=False)\n",
+    "times.to_csv('wrang/times.csv', index=False)\n",
     "times.to_csv('../../Public-Viz-F1/times.csv', index=False)"
    ]
   },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "[2336 rows x 3 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
     "# pivot to make the columns turn into rows\n",
     "newDriversWinners = newDriversWinners.melt(id_vars=['year'], var_name='driverFullname', value_name='wins')\n",
     "\n",
-    "newDriversWinners.to_csv('driversWinners.csv', index=False)\n",
+    "newDriversWinners.to_csv('wrang/driversWinners.csv', index=False)\n",
     "newDriversWinners.to_csv('../../Public-Viz-F1/driversWinners.csv', index=False)\n",
     "\n",
     "newDriversWinners"
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        "[1314 rows x 3 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,10 +744,32 @@
     "# pivot to make the columns turn into rows\n",
     "newConstructorsWinners = newConstructorsWinners.melt(id_vars=['year'], var_name='constructorName', value_name='wins')\n",
     "\n",
-    "newConstructorsWinners.to_csv('constructorsWinners.csv', index=False)\n",
+    "newConstructorsWinners.to_csv('wrang/constructorsWinners.csv', index=False)\n",
     "newConstructorsWinners.to_csv('../../Public-Viz-F1/constructorsWinners.csv', index=False)\n",
     "\n",
     "newConstructorsWinners"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columnsConstructorsWinnersByRace = ['year', 'raceId', 'raceName', 'constructorName', 'position']\n",
+    "totalWins = results[columnsConstructorsWinnersByRace].query(\"position == '1'\") \\\n",
+    "              .groupby(['year', 'constructorName'])['position'] \\\n",
+    "              .count() \\\n",
+    "              .reset_index(name='wins')\n",
+    "\n",
+    "# get the cumulative count of wins\n",
+    "totalWins['wins_cum'] = totalWins.groupby(['constructorName'])['wins'].cumsum()\n",
+    "\n",
+    "totalWins = totalWins.pivot(index='year', columns='constructorName', values='wins_cum').fillna(method='ffill').fillna(0).reset_index()\n",
+    "newConstructorsWinnersByRace = totalWins.melt(id_vars=['year'], var_name='constructorName', value_name='wins_cum')\n",
+    "\n",
+    "newConstructorsWinnersByRace.to_csv('wrang/constructorRaceWins.csv', index=False)\n",
+    "newConstructorsWinnersByRace.to_csv('../../Public-Viz-F1/constructorRaceWins.csv', index=False)"
    ]
   }
  ],
